--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -188,4 +188,33 @@ schemes:
       cyan:    '#29b8db'
       white:   '#e5e5e5'
 
-colors: *popos
+  # tender
+  tender: &tender
+    # Default colors
+    primary:
+      background: '#282828'
+      foreground: '#eeeeee'
+
+    # Normal colors
+    normal:
+      black:   '#282828'
+      red:     '#f43753'
+      green:   '#c9d05c'
+      yellow:  '#ffc24b'
+      blue:    '#b3deef'
+      magenta: '#d3b987'
+      cyan:    '#73cef4'
+      white:   '#eeeeee'
+
+    # Bright colors
+    bright:
+      black:   '#4c4c4c'
+      red:     '#f43753'
+      green:   '#c9d05c'
+      yellow:  '#ffc24b'
+      blue:    '#b3deef'
+      magenta: '#d3b987'
+      cyan:    '#73cef4'
+      white:   '#feffff'
+
+colors: *tender
