--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -121,10 +121,11 @@ inactive-opacity = 0.7
 # frame-opacity = 1.0
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
-# inactive-opacity-override = true
-inactive-opacity-override = false;
+inactive-opacity-override = true
+# inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
+# active-opacity = 0.8
 active-opacity = 0.8
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
