--- a/.config/i3/config
+++ b/.config/i3/config
@@ -44,6 +44,7 @@ bindsym $mod+t exec $term
 bindsym $mod+b exec $browser
 
 bindsym $mod+q kill
+bindsym $mod+Shif+q killall
 bindsym $mod+Escape exec --no-startup-id ~/.config/i3/scripts/blur-lock
 
 bindsym $mod+d exec rofi -show combi -combi-modi drun
@@ -226,16 +227,16 @@ mode "resize" {
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
 	# (tweaked from defaults to be more VIM-like)
-        bindsym h resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym k resize shrink height 10 px or 10 ppt
-        bindsym l resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 5 px or 5 ppt
+        bindsym j resize grow height 5 px or 5 ppt
+        bindsym k resize shrink height 5 px or 5 ppt
+        bindsym l resize grow width 5 px or 5 ppt
 
         # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
+        bindsym Left resize shrink width 5 px or 5 ppt
+        bindsym Down resize grow height 5 px or 5 ppt
+        bindsym Up resize shrink height 5 px or 5 ppt
+        bindsym Right resize grow width 5 px or 5 ppt
 
         # back to normal: Enter or Escape
         bindsym Return mode "default";
@@ -315,6 +316,9 @@ exec --no-startup-id nm-applet
 # exec --no-startup-id feh --bg-fill /usr/share/backgrounds/pop/benjamin-voros-250200.jpg
 # exec --no-startup-id feh --bg-fill /usr/share/backgrounds/pop/jasper-van-der-meij-97274-edit.jpg
 exec --no-startup-id feh --bg-fill /usr/share/backgrounds/System76-Old_Man_Smoked_His_Pipe-by_Ian_Hex_of_LightSweep.jpg
+
+# run Fcitx
+exec --no-startup-id fcitx
 
 exec_always --no-startup-id xrandr --output eDP-1 --mode 2160x1350
 
